test-utils.sh:    added -d for details, made the default be brief.    changed the "verbose" variable to "test_verbose".
README.me:
   added some doc about the option scanning in "init_test".
   wrapped some paragraphs

Makefile.inc:
   check for .git dir before .svn or RCS

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -111,8 +111,8 @@ getzip:
 	scp $(disthost):$(distpath)/$(zipfile) .
 
 status:
-	@if [[ -d .svn ]]; then svn status ; \
-	elif [[ -d .git ]]; then git status ; \
+	@if [[ -d .git ]]; then git status ; \
+	elif [[ -d .svn ]]; then svn status ; \
 	elif [[ -d RCS ]]; then rlog -R -L RCS/* ; fi
 
 subdirs:	$(subdirs)
